--- a/app/(pages)/(index-page)/_components/RiverCow/RiverCow.module.scss
+++ b/app/(pages)/(index-page)/_components/RiverCow/RiverCow.module.scss
@@ -6,7 +6,10 @@
     background-color: var(--color-water);
     align-items: center;
     overflow: hidden;
-    margin-top: -80px;
+
+    @include mixins.phone {
+        padding-top: 48px;
+    }
 }
 
 .top_leaf_layer {
